@@ -3806,6 +3806,13 @@ struct permonst _mons2[] = {
 	SIZ(20, 200, 0, MS_SILENT, MZ_SMALL), 0, 0,
 	M1_BREATHLESS|M1_NOEYES|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS|M1_NOTAKE,
 	M2_HOSTILE|M2_NEUTER|M2_NOPOLY, M3_STATIONARY, CLR_BRIGHT_GREEN),
+    MON("dungeon fern sprout", S_FUNGUS,
+	LVL(6, 2, 10, 0, 0), (G_NOSHEOL|G_GENO|G_NOCORPSE|G_NOGEN),
+	A(ATTK(AT_GAZE, AD_SPOR, 0, 0), NO_ATTK,
+	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
+	SIZ(20, 200, 0, MS_SILENT, MZ_SMALL), 0, 0,
+	M1_BREATHLESS|M1_NOEYES|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS|M1_NOTAKE,
+	M2_HOSTILE|M2_NEUTER|M2_NOPOLY, M3_STATIONARY, CLR_BRIGHT_GREEN),
     MON("dungeon fern spore", S_EYE,
 	LVL(1, 3, 5, 0, 0), (G_NOCORPSE|G_NOGEN),
 	A(ATTK(AT_EXPL, AD_PHYS, 2, 4), ATTK(AT_BOOM, AD_PHYS, 2, 4),
